Add Debug Capability

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "skipLibCheck": false,
+    "sourceMap": true,
+    "allowJs": true
   }
 }
