Adding Development Logging

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# Set NODE_ENV to development to use the Logger-Methods
+NODE_ENV=development
+
+# Bot Specific Configuration
 DISCORD_TOKEN=DISCORD_BOT_TOKEN
 DISCORD_CLIENT_ID=BOT_ID
 TARGET_SERVER=SERVER_ID
