--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,23 +1,29 @@
 {
-    "version": "0.2.0",
-
-    "configurations": [
-        /*
-        Each config in this array is an option in the debug drop-down
-        See below for configurations to add...
-        */
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Build Project",
-            "program": "${workspaceFolder}/src/index.ts",
-            "preLaunchTask": "npm: build",
-            "sourceMaps": true,
-            "smartStep": true,
-            "internalConsoleOptions": "openOnSessionStart",
-            "outFiles": [
-                "${workspaceFolder}/build/**/*.js"
-            ]
-        }
-    ],
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "start",
+      "type": "node",
+      "request": "launch",
+      "runtimeExecutable": "pnpm",
+      "runtimeArgs": ["run-script", "testdev"],
+      "cwd": "${workspaceRoot}",
+      "internalConsoleOptions": "openOnSessionStart",
+    }, 
+    {
+      "name": "Attach to Process",
+      "type": "node",
+      "request": "attach",
+      "restart": true,
+      "port": 5858,
+      "outFiles": [],
+      "sourceMaps": true
+    },
+  ],
+  "compounds": [
+    {
+      "name": "Compound",
+      "configurations": ["start", "Attach to Process"]
+    }
+  ]
 }
