--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,7 @@
     "skipLibCheck": false,
     "sourceMap": true,
     "allowJs": true
-  }
+  },
+  "exclude": ["node_modules"],
+  "include": ["src/"]
 }
